--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-firebase-auth-edge": "^1.11.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "uuid": "^13.0.0"
   },
