--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "seed": "tsx scripts/seedFirebase.ts",
-    "seed:clear": "tsx scripts/seedFirebase.ts --clear"
+    "seed:clear": "tsx scripts/seedFirebase.ts --clear",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -18,16 +26,21 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "next-firebase-auth-edge": "^1.11.1",
     "react": "19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -36,6 +49,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "husky": "^9.0.0",
     "tailwindcss": "^4",
     "tsx": "^4.0.0",
     "typescript": "^5"
