--- a/firebase.json
+++ b/firebase.json
@@ -3,8 +3,11 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "storage": {
-    "rules": "storage.rules"
-  }
+  "storage": [
+    {
+      "bucket": "sirius-cf574.firebasestorage.app",
+      "rules": "storage.rules"
+    }
+  ]
 }
 
